# MCP-ollama_server

./: .gitignore
calendar/: google_calendar.py
client_mcp/: client.py  diagnose.py
file_system/: file_system.py
web_search/: README.md  pyproject.toml  web_search.py
